--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     ]
   },
   "dependencies": {
+    "@apollo/client": "^3.13.8",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.1.0",
@@ -30,6 +31,7 @@
     "@web3-react/types": "^8.2.2",
     "dotenv": "^16.3.1",
     "ethers": "^6.10.0",
+    "graphql": "^16.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "^5.3.3",
