--- a/package.json
+++ b/package.json
@@ -1,71 +1,72 @@
 {
-  "name": "my-dapp",
-  "version": "0.1.0",
-  "license": "MIT",
+  "name": "my-ai-dapp",
+  "version": "1.0.0",
+  "main": "index.js",
   "scripts": {
-    "start": "webpack serve --mode development --open",
-    "build": "webpack --mode production",
-    "test": "jest"
+    "client:dev": "webpack --mode development",
+    "client:serve": "webpack serve --mode development",
+    "client:prod": "webpack --mode production",
+    "jest:test": "jest",
+    "jest:ui": "majestic",
+    "prepare": "husky"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "dependencies": {
     "@apollo/client": "^3.13.8",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mastra/client-js": "^0.1.22",
-    "@mui/icons-material": "^7.1.0",
-    "@mui/material": "^7.1.0",
-    "@svgr/webpack": "^8.1.0",
-    "@testing-library/jest-dom": "^6.2.0",
-    "@testing-library/react": "^14.1.2",
-    "@testing-library/user-event": "^14.5.2",
-    "@types/jest": "^29.5.11",
-    "@types/node": "^20.11.5",
-    "@types/react": "^18.2.48",
-    "@types/react-dom": "^18.2.18",
-    "@web3-react/core": "^8.2.3",
-    "@web3-react/metamask": "^8.2.3",
-    "@web3-react/types": "^8.2.2",
-    "dotenv": "^16.3.1",
-    "ethers": "^6.10.0",
+    "@mastra/client-js": "^0.10.6",
+    "@metamask/sdk": "^0.33.0",
+    "@mui/icons-material": "^7.1.2",
+    "@mui/material": "^7.1.2",
     "graphql": "^16.11.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-markdown": "^10.1.0",
-    "typescript": "^5.3.3",
-    "web-vitals": "^3.5.1"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-markdown": "^10.1.0"
   },
   "devDependencies": {
-    "@swc/core": "^1.4.0",
-    "@swc/jest": "^0.2.31",
-    "@tailwindcss/postcss": "^4.1.6",
-    "autoprefixer": "^10.4.16",
+    "@soda/friendly-errors-webpack-plugin": "^1.8.1",
+    "@swc/core": "^1.12.6",
+    "@tailwindcss/postcss": "^4.1.10",
+    "@types/node": "^24.0.4",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "@typescript-eslint/eslint-plugin": "^8.35.0",
+    "@typescript-eslint/parser": "^8.35.0",
+    "@welldone-software/why-did-you-render": "^10.0.1",
+    "backstopjs": "^6.3.25",
     "clean-webpack-plugin": "^4.0.0",
-    "copy-webpack-plugin": "^12.0.2",
-    "css-loader": "^6.10.0",
-    "dotenv-webpack": "^8.0.1",
-    "html-webpack-plugin": "^5.6.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "mini-css-extract-plugin": "^2.7.7",
-    "postcss": "^8.4.33",
-    "postcss-import": "^16.1.0",
-    "postcss-loader": "^8.0.0",
-    "postcss-preset-env": "^10.1.6",
-    "style-loader": "^3.3.4",
-    "swc-loader": "^0.2.3",
-    "tailwindcss": "^4.0.0",
-    "terser-webpack-plugin": "^5.3.10",
-    "ts-jest": "^29.1.2",
-    "ts-node": "^10.9.2",
-    "webpack": "^5.90.0",
-    "webpack-bundle-analyzer": "^4.10.1",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "css-loader": "^7.1.2",
+    "css-minimizer-webpack-plugin": "^7.0.2",
+    "eslint-config-airbnb-typescript": "^18.0.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-jest": "^29.0.1",
+    "eslint-plugin-prettier": "^5.5.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "html-webpack-plugin": "^5.6.3",
+    "husky": "^9.1.7",
+    "jest": "^30.0.3",
+    "mini-css-extract-plugin": "^2.9.2",
+    "node-notifier": "^10.0.1",
+    "postcss": "^8.5.6",
+    "postcss-loader": "^8.1.1",
+    "prettier": "^3.6.0",
+    "puppeteer": "^24.10.2",
+    "rize": "^0.9.0",
+    "selenium-webdriver": "^4.33.0",
+    "style-loader": "^4.0.0",
+    "swc-loader": "^0.2.6",
+    "tailwindcss": "^4.1.10",
+    "terser-webpack-plugin": "^5.3.14",
+    "themed-progress-plugin": "^1.0.1",
+    "webpack": "^5.99.9",
+    "webpack-bundle-analyzer": "^4.10.2",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.2",
+    "yargs-parser": "21.1.1"
   }
 }
